--- a/高可用.md
+++ b/高可用.md
@@ -33,12 +33,12 @@
 ### 3. 外部依赖的地方没有熔断(降级)的问题(即：我们依赖的地方)
 系统没有熔断，如果由于代码逻辑问题上线引起故障、网络问题、调用超时、业务促销调用量激增、服务容量不足等原因，服务调用链路上有一个下游服务出现故障，就可能导致接入层其它的业务不可用。
 
-![----1](http://39.106.173.209:88/content/images/2018/07/----1.png)
+![----1](https://github.com/kgtom/back-end/blob/master/pic/%E6%97%A0%E7%86%94%E6%96%AD.png)
 
 
 ### 4. 依赖我们的地方没有限流的问题
 在开放式的网络环境下，对外系统往往会收到很多有意无意的恶意攻击，如DDoS攻击、用户失败重刷。
-![----2](http://39.106.173.209:88/content/images/2018/07/----2.png)
+![----2](https://github.com/kgtom/back-end/blob/master/pic/%E6%97%A0%E9%99%90%E6%B5%81.png)
 
 ### 5.依赖不合理的问题
  每多一个依赖方，风险就会累加。特别是强依赖，它本身意味着一荣俱荣、一损俱损。
@@ -48,7 +48,7 @@
 
 ### 7. 慢查询问题
 
-![----3](http://39.106.173.209:88/content/images/2018/07/----3.png)
+![----3](https://github.com/kgtom/back-end/blob/master/pic/%E6%85%A2%E6%9F%A5%E8%AF%A2.png)
 
 ### 8. 废弃逻辑和临时代码
 过期的代码会对正常逻辑有干扰，让代码不清晰。特别是对新加入的同事，他们对明白干什么用的代码可以处理。但是已经废弃的和临时的，因为不知道干什么用的，所以改起来更忐忑。如果知道是废弃的，其它功能改了这一块没改，也有可能这块不兼容，引发问题。
@@ -60,14 +60,14 @@
 1. MTBF (Mean Time Between Failure) 即平均多长时间不出故障；
 2. MTTR (Mean Time To Recovery) 即出故障后的平均恢复时间。
 
-![availability](http://39.106.173.209:88/content/images/2018/07/availability.png)
+![availability](https://github.com/kgtom/back-end/blob/master/pic/availability.png)
 
 通过这两个指标可以计算出可用性，也就是我们大家比较熟悉的“几个9”。
 
-![availability-stander](http://39.106.173.209:88/content/images/2018/07/availability-stander.png)
+![availability-stander](https://github.com/kgtom/back-end/blob/master/pic/availability-stander.png)
 
 
-![-------](http://39.106.173.209:88/content/images/2018/07/-------.png)
+![-------](https://github.com/kgtom/back-end/blob/master/pic/%E5%8F%AF%E7%94%A8%E6%80%A7%E8%AE%A1%E7%AE%97.png)
 
 因此提升系统的可用性，就得从这两个指标入手，要么降低故障恢复的时间，要么延长不出故障的时间。
  
