--- a/微服务.md
+++ b/微服务.md
@@ -86,15 +86,42 @@
 
 ####  理论基础: ACID 、BASE、CAP，强两者“酸碱理论”，后者名“帽子理论”
 
-* 1. 传统分布式事务：采用两阶段提交或者TCC三阶段提交
+* 一. 传统分布式事务：采用两阶段提交或者TCC三阶段提交
 
-* 2. 互联网分布式事务：
+* 二. 互联网分布式事务：
 
    - 引入日志(事务开始、结束日志及数据REDO/UNDO,当事务重试、回滚时，根据日志最终将数据恢复到一致性)及补偿机制，根据CAP，结合业务通常牺牲一致性，追求最终一致性
    - 可靠的信息传递，消息传递有三种状态：成功、失败、不知道成功还是失败。投递有两种方式(仅投递一次、至少投递一次(幂等性，记录业务编号，建立排重表))
   - 实现无锁，两种方式
      - 建立辅助业务明细表。例如：下单成功后，不去减少库存，而是记录库存增减明细表，等支付成功后，再去更新库存数量。
      - 使用版本号的方式实现乐观锁。表中记录版本号字段，事务开始前获取到版本号，事务最后update是获取版本号，如何两者一致则继续更新，否则说明其它事务有修改，放弃本次事务。这种好处避免了长事务中的数据库加锁开销。
+     
+* 三.根据业务场景，具体做法如下：
+
+* 1.查询模式
+
+    场景：同步数据、同步超时、异步回调超时、各系统状态的不一致
+    使用查询模式了解被调用服务的处理情况，来决定下一步操作；是补偿未完成的还是回滚已完成的。
+
+* 2.补偿模式
+    分系统自动回复和通知运营线下处理
+
+* 3.异步模式
+    电商系统中物流、配送； erp订单和财务结算对账
+
+* 4.使用消息系统(nsq、mq等)
+       订单系统A表和记录发送给M的D表---》 消息系统M  ---》 财务系统B表 和记录已处理的订单C表(两者一个事务)
+
+    **讲解：**
+    A下单成功后，D表中存储一笔发送记录待发送，向M存储一笔信息，向M发送成功后，改变D表状态 发送成功，该消息通知B有一条结算数据，通知B之前，
+          先检查一下C中是否已经处理了过这个订单A的数量，如果没有处理，则处理B并且在C中加一笔数据，B和C一个事务中。
+          A下单成功后，如果存储M失败，则定时从D表中获取待发送的消息存储到M.
+ * 5. 同步模式
+      例如：支付完成后，增加客人的常旅客积分。保证业务数据的实时性和一致性，支付成功后必须加积分，我们让常旅客模块提供新增积分和积分回撤功能。
+           具体流程：先增加积分，积分成功后，再调用支付，如果支付失败，则调用积分回撤的API。
+
+  * 6.定时校对，然后进行补偿
+        使用消息队列nsq，需要保证nsq是否成功接收，定时校对，然后再执行存储。
 
     **总结阿里做法：**
     * 分布式MQ队列，解耦模板，提高业务处理的吞吐率和响应时间。
