--- a/微服务.md
+++ b/微服务.md
@@ -1,3 +1,10 @@
+## 学习大纲
+* [一、背景](#1)
+* [二、理论](#2)
+* [三、发现问题](#3)
+* [四、解决问题](#4)
+* [五、总结](#5)
+
 ## 一、背景
 * 互联网时代，面对较大用户量，提高用户体验、系统吞吐量
 * 单体应用无法满足当前需求，举例例子：一只筷子一折就断，一把筷子怎么都折不断，可见人多力量大的思想是多么的重要，但是人多也不一定能解决所有事情，还得进行有序、合理的分配任务，进行有效的管理，对应互联网就是两个字： **拆分**，包括水平(多个节点具有同样功能)和垂直(专业事交给专业人去做)拆分。(ps:拆分后面临分布式一致性问题)
@@ -72,7 +79,7 @@
 * [服务异步的方式调用和缓存redis使用](https://github.com/kgtom/daily-life/blob/master/books/%E3%80%8A%E4%BC%81%E4%B8%9AIT%E6%9E%B6%E6%9E%84%E8%BD%AC%E5%9E%8B%E4%B9%8B%E9%81%93--%E5%BC%82%E6%AD%A5%E5%8C%96(%E5%88%86%E5%B8%83%E5%BC%8F)%E4%B8%8E%E7%BC%93%E5%AD%98%E3%80%8B.md)，解决大量同步方式带来的性能问题，异步包括(业务流程异步化、db事务异步化)
  
 
-## 五、总结
+## <span id="5">五、总结</span>
 
 ### **系统不断迭代，从0到1过程**
 * 1.流量小：提高开发效率，引入orm 、gin等框架
@@ -86,9 +93,9 @@
 
 ####  理论基础: ACID 、BASE、CAP，强两者“酸碱理论”，后者名“帽子理论”
 
-* 一. 传统分布式事务：采用两阶段提交或者TCC三阶段提交
+ 一. 传统分布式事务：采用两阶段提交或者TCC三阶段提交
 
-* 二. 互联网分布式事务：
+ 二. 互联网分布式事务：
 
    - 引入日志(事务开始、结束日志及数据REDO/UNDO,当事务重试、回滚时，根据日志最终将数据恢复到一致性)及补偿机制，根据CAP，结合业务通常牺牲一致性，追求最终一致性
    - 可靠的信息传递，消息传递有三种状态：成功、失败、不知道成功还是失败。投递有两种方式(仅投递一次、至少投递一次(幂等性，记录业务编号，建立排重表))
@@ -96,7 +103,7 @@
      - 建立辅助业务明细表。例如：下单成功后，不去减少库存，而是记录库存增减明细表，等支付成功后，再去更新库存数量。
      - 使用版本号的方式实现乐观锁。表中记录版本号字段，事务开始前获取到版本号，事务最后update是获取版本号，如何两者一致则继续更新，否则说明其它事务有修改，放弃本次事务。这种好处避免了长事务中的数据库加锁开销。
      
-* 三.根据业务场景，具体做法如下：
+ 三.根据业务场景，具体做法如下：
 
 * 1.查询模式
 
