--- a/面向对象.md
+++ b/面向对象.md
@@ -1,15 +1,15 @@
 ## 学习大纲
 ### 一、三大特性
-封装
-继承
-多态
+*封装
+*继承
+*多态
 ### 二、类图
-泛化关系 (Generalization)
-实现关系 (Realization)
-聚合关系 (Aggregation)
-组合关系 (Composition)
-关联关系 (Association)
-依赖关系 (Dependency)
+* 泛化关系 (Generalization)
+* 实现关系 (Realization)
+* 聚合关系 (Aggregation)
+* 组合关系 (Composition)
+* 关联关系 (Association)
+* 依赖关系 (Dependency)
 ### 三、设计原则
 S.O.L.I.D
 
