--- a/数据库.md
+++ b/数据库.md
@@ -1,1 +1,18 @@
+# 学习大纲
 
+## 一、事务
+1. 概念
+2. ACID
+3. AUTOCOMMIT
+
+## 二、并发一致性问题
+1. 丢失修改
+2. 读脏数据
+3. 不可重复读
+4. 幻影读
+
+## 三、封锁
+1. 封锁粒度
+2. 封锁类型
+3. 封锁协议
+4. MySQL 隐式与显示锁定
