--- a/高可用.md
+++ b/高可用.md
@@ -1,3 +1,11 @@
+## 学习大纲
+[一、前言？](#1)
+[二、发现问题](#2)
+[三、分析问题](#3)
+[四、解决问题(如何实现高可用)](#4)
+[五、总结](#5)
+
+
 ## 一、前言
 
 
@@ -57,12 +65,15 @@
 ### 8. 废弃逻辑和临时代码
 过期的代码会对正常逻辑有干扰，让代码不清晰。特别是对新加入的同事，他们对明白干什么用的代码可以处理。但是已经废弃的和临时的，因为不知道干什么用的，所以改起来更忐忑。如果知道是废弃的，其它功能改了这一块没改，也有可能这块不兼容，引发问题。
 
-## 四、解决问题(如何实现高可用)
+## <span id="4">四、解决问题(如何实现高可用)</span>
 
 ### 1.高可用指标
+
+高可用HA（High Availability）是分布式系统架构设计中必须考虑的因素之一，它通常是指，通过设计减少系统出故障的时间
+
 衡量一个系统的可用性有两个指标：
-1. MTBF (Mean Time Between Failure) 即平均多长时间不出故障；
-2. MTTR (Mean Time To Recovery) 即出故障后的平均恢复时间。
+*  MTBF (Mean Time Between Failure) 即平均多长时间不出故障；
+*  MTTR (Mean Time To Recovery) 即出故障后的平均恢复时间。
 
 ![availability](https://github.com/kgtom/back-end/blob/master/pic/availability.png)
 
@@ -156,7 +167,10 @@ c.不被队友搞死：
 *   code review保证每段逻辑都明白其含义，弄清楚是否是历史逻辑或者临时逻辑
 
 
-### 五、持续跟进，定期检查checklist
+### <span id="5">五、总结</span>
+
+
+#### 1.持续跟进，定期检查checklist
 
  大分类 | 具体项
 ---- | ---|
@@ -165,7 +179,21 @@ c.不被队友搞死：
 被依赖的内外部系统|超时时间、超时次数、幂等性、是否限流
 核心api|qps、cup、内存使用率
 
+
+#### 2.总结
+在分布式框架各个层都有进行 **冗余+故障转移**,即：一个挂了，用2个，两个挂了用集群，集群挂了用异地灾备。具体如下：
+
+* 反向代理层nginx:使用[keepalived存活探测](https://www.cnblogs.com/kevingrace/p/6138185.html)和virtual IP提供服务。
+* web站点层：使用nginx.conf配置多个web站点，nginx可以检测后端存活性
+* server服务层：使用rancher 随机选取下游可用服务
+* 缓存：redis天然支持主从同步，redis官方也有sentinel哨兵机制，来做redis的存活性检测，发现主redis挂了，快速转移到另一个从redis.
+* 数据库：主从同步，读写分离，使用db 连接池发现挂了，快速转移到另一个db.
+
+
+反向代理Nginx：
 > reference:
 * [meituan-account](https://tech.meituan.com/dp_account_high_avaliable_road.html)
 * [meituan-pay](https://tech.meituan.com/Trade-High-Availability-in-Action.html)
 * [meituan-zhanlang](http://itindex.net/detail/58097-%E6%88%98%E7%8B%BC-%E9%A1%B9%E7%9B%AE-%E7%BE%8E%E5%9B%A2)
+* [cnblogs](https://www.cnblogs.com/shizhiyi/p/7750530.html)
+
