--- a/高可用.md
+++ b/高可用.md
@@ -1,9 +1,10 @@
+
 ## 学习大纲
-[一、前言？](#1)
-[二、发现问题](#2)
-[三、分析问题](#3)
-[四、解决问题(如何实现高可用)](#4)
-[五、总结](#5)
+* [一、前言？](#1)
+* [二、发现问题](#2)
+* [三、分析问题](#3)
+* [四、解决问题(如何实现高可用)](#4)
+* [五、总结](#5)
 
 
 ## 一、前言
