--- a/面向对象.md
+++ b/面向对象.md
@@ -13,7 +13,17 @@
 ### 三、设计原则
 S.O.L.I.D
 
+# 一、三大特性
+## 封装
+封装自己的属性和方法，利于减少耦合、隐藏内部细节、便于通过方法控制自己的属性
+## 继承
+实现 Is -a 的关系，符合 里氏替换原则。
 
+## 多态
+在GO 语言：包含 继承父类的方法和重写父类的方法
+在C# 语言：继承 和 重载
+
+# 二、类图
 
 >reference
 [github-CyC2018](https://github.com/CyC2018/Interview-Notebook/blob/master/notes/%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E6%80%9D%E6%83%B3.md#%E4%B8%80%E4%B8%89%E5%A4%A7%E7%89%B9%E6%80%A7)
