--- a/面向对象.md
+++ b/面向对象.md
@@ -13,6 +13,7 @@
 ### 三、设计原则
 S.O.L.I.D
 
+
 # 一、三大特性
 ## 封装
 封装自己的属性和方法，利于减少耦合、隐藏内部细节、便于通过方法控制自己的属性
@@ -23,11 +24,11 @@ S.O.L.I.D
 在GO 语言：包含 继承父类的方法和重写父类的方法
 在C# 语言：继承 和 重载
 
-
 # 二、类图
 ## 泛化
 一种继承关系，例如：大象是动物的一种，即有大象的特性也有动物的共性。
 【箭头指向】：带三角箭头的实线，箭头指向父类
+
 ## 实现
 一种类与接口的关系，例如：Go语言中实现interfere 
 【箭头指向】：带三角箭头的虚线，箭头指向接口
@@ -35,23 +36,27 @@ S.O.L.I.D
 ## 聚合
 一种整体与部分的关系，但部分可以脱离整体单独存在，例如：车和轮胎，离开车，轮胎也是单个个体，可以存在。
 【箭头及指向】：带空心菱形的实心线，菱形指向整体
+
 ## 组合
 区别于 **聚合** 一种整体与部分的关系，但部分离开整体不能存在，例如:公司与部门，没有了公司，部门也就不存在了。
 【箭头及指向】：带实心菱形的实线，菱形指向整体
+
 ## 关联
-不同类对象之间的关系，例如 学生与课程
+不同类对象之间的关系，例如 学生与课程，学生拥有课程，1：N关系。
 【箭头及指向】：带普通箭头的实心线，指向被拥有者
 ## 依赖
-是一种使用的关系，即一个类的实现需要另一个类的协助，例如：
+是一种使用的关系，即一个类的实现需要另一个类的协助，例如：人使用计算机
 【箭头及指向】：带箭头的虚线，指向被使用者
 
-## 各种关系的强弱顺序：
+## 总结：各种关系的强弱顺序
 
- 泛化 = 实现 > 组合 > 聚合 > 关联 > 依赖 
+泛化 = 实现 > 组合 > 聚合 > 关联 > 依赖 
+
+# SOILD
+
+[详见](https://github.com/kgtom/daily-life/blob/master/books/oop%E8%AE%BE%E8%AE%A1%E5%8E%9F%E5%88%99.md)
+ 
  
 >reference
 [github-CyC2018](https://github.com/CyC2018/Interview-Notebook/blob/master/notes/%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E6%80%9D%E6%83%B3.md#%E4%B8%80%E4%B8%89%E5%A4%A7%E7%89%B9%E6%80%A7)
 [cnblogs](https://www.cnblogs.com/zhangmingcheng/p/6025291.html)
-
->reference
-[github-CyC2018](https://github.com/CyC2018/Interview-Notebook/blob/master/notes/%E9%9D%A2%E5%90%91%E5%AF%B9%E8%B1%A1%E6%80%9D%E6%83%B3.md#%E4%B8%80%E4%B8%89%E5%A4%A7%E7%89%B9%E6%80%A7)
