--- a/数据结构.md
+++ b/数据结构.md
@@ -1,1 +1,37 @@
 
+# 学习大纲
+* [一、生活中的数据结构](#1)
+* [二、常见的数据结构](#2)
+* [三、数据结构优缺点](#3)
+
+## <span id="1">一、生活中数据结构</span>
+* 栈：洗盘子，洗完一个，放在前一个上面，取盘子的时候，从最后一个盘子开始取。
+* 队列：做地铁排队，依次进入车厢
+* 树：自顶而下公司结构、二叉树
+* 图：各种图，例如交通网络
+* 集合：字典kv
+
+其中：栈、对列、数组、数组、链表属于线性结构
+
+## <span id="2">二、常见的数据结构</span>
+**数据结构：数据之间关系及存储、组织数据的方式**
+
+
+### 1、栈
+一种特殊线性结构，先进后出，只能操作与栈顶。
+
+
+
+### 2、队列
+
+
+
+## <span id="3">三、数据结构优缺点</span>
+
+
+>reference:
+[csdn](https://blog.csdn.net/u014419014/article/details/78770812)
+
+
+
+
