--- a/数据结构.md
+++ b/数据结构.md
@@ -31,6 +31,10 @@
 
 >reference:
 [csdn](https://blog.csdn.net/u014419014/article/details/78770812)
+[csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
+
+
+
 
 
 
