--- a/数据结构.md
+++ b/数据结构.md
@@ -18,12 +18,10 @@
 
 
 ### 1、栈
-一种特殊线性结构，先进后出，只能操作与栈顶。
+* 一种特殊线性结构，先进后出，只能操作与栈顶。
 
+* [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/stack.md)
 
-~~~go
-[代码](https://github.com/kgtom/back-end/blob/master/leetcode/stack.md)
-~~~
 
 
 
