--- a/数据结构.md
+++ b/数据结构.md
@@ -16,18 +16,17 @@
 ## <span id="2">二、常见的数据结构</span>
 **数据结构：数据之间关系及存储、组织数据的方式**
 
-
 ### 1、栈
-* 一种特殊线性结构，先进后出，只能操作与栈顶。
 
+* 一种特殊线性结构，先进后出，只能操作与栈顶。 
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/stack.md)
 
 
-
-
-
 ### 2、队列
+* 先进先出的线性结构
+* [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/queue.md)
 
+### 3.
 
 
 ## <span id="3">三、数据结构优缺点</span>
