--- a/数据结构.md
+++ b/数据结构.md
@@ -1,4 +1,3 @@
-
 # 学习大纲
 * [一、生活中的数据结构](#1)
 * [二、常见的数据结构](#2)
@@ -8,13 +7,14 @@
 * 栈：洗盘子，洗完一个，放在前一个上面，取盘子的时候，从最后一个盘子开始取。
 * 队列：做地铁排队，依次进入车厢
 * 树：自顶而下公司结构、二叉树
-* 图：各种图，例如交通网络
+* 图：各种图，例如交通网图，当使用地图功能查询两地之间的路线，此时利用了图的存储和遍历运算，求出最优解。现实生活很多复杂问题都可以通过图解决，一图胜千言啊。
 * 集合：字典kv
 
 其中：栈、对列、数组、数组、链表属于线性结构
 
 ## <span id="2">二、常见的数据结构</span>
 **数据结构：数据之间关系及存储、组织数据的方式**
+
 
 ### 1、栈
 
@@ -26,8 +26,9 @@
 * 先进先出的线性结构
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/queue.md)
 
-### 3.
-
+### 3.图
+* 图是描述事物之间关系的
+* [代码地址链接](http://)
 
 ## <span id="3">三、数据结构优缺点</span>
 
@@ -49,9 +50,6 @@
 >reference:
 [csdn](https://blog.csdn.net/u014419014/article/details/78770812)
 [csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
-
-
-
 
 
 
