--- a/算法.md
+++ b/算法.md
@@ -1,1 +1,12 @@
 
+  
+  # 前言
+  
+    著名的瑞士计算机科学家沃思（N.Wirth）教授曾提出：
+    算法+数据结构=程序
+    数据结构：是指数据的逻辑结构和存储结构
+    算法：是对数据运算的描述
+    
+  # 学习大纲
+  
+    
