--- a/数据结构.md
+++ b/数据结构.md
@@ -1,4 +1,4 @@
-     
+   
     著名的瑞士计算机科学家沃思（N.Wirth）教授曾提出：
     算法+数据结构=程序
     数据结构：是指数据的逻辑结构和存储结构
@@ -18,7 +18,10 @@
 * 图：各种图，例如交通网图，当使用地图功能查询两地之间的路线，此时利用了图的存储和遍历运算，求出最优解。现实生活很多复杂问题都可以通过图解决，一图胜千言啊。
 * 集合：字典kv
 
-其中：栈、对列、数组、数组、链表属于线性结构
+
+数据的逻辑结构分为线性结构和非线性结构。
+* 常用的线性结构有：线性表，栈，队列，双队列，数组，串。
+* 常见的非线性结构有：二维数组，多维数组，广义表，树(二叉树等)，图，堆。
 
 ## <span id="2">二、常见的数据结构</span>
 **数据结构：数据之间关系及存储、组织数据的方式**
@@ -34,11 +37,21 @@
 * 先进先出的线性结构
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/queue.md)
 
+### 3.链表
+* 链表就是线性表的链式存储方式。链表的内存是不连续的, 
+* [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/list.md)
 
-### 3.树
+
+### 4.树
 
 
-### 4.图
+### 5.堆
+* 堆实际上是一颗 完全二叉树 ，它满足父结点大于（或小于）子结点特性。父结点大于子结点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父结点小于子结点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
+* 包括：上浮、下沉、插入、删除、获取等操作
+* [代码地址链接](http://)
+
+
+### 6.图
 * 图是描述事物之间关系的
 * [代码地址链接](http://)
 
@@ -60,8 +73,8 @@
 图|	对现实世界建模|	有些算法慢且复杂
 
 >reference:
-[csdn](https://blog.csdn.net/u014419014/article/details/78770812)
-[csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
+* [csdn](https://blog.csdn.net/u014419014/article/details/78770812)
+* [csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
 
 
 
