--- a/数据结构.md
+++ b/数据结构.md
@@ -47,8 +47,8 @@
 
 ### 5.堆
 * 堆实际上是一颗 完全二叉树 ，它满足父结点大于（或小于）子结点特性。父结点大于子结点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父结点小于子结点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
-* 包括：上浮、下沉、插入、删除、获取等操作
-* [代码地址链接](http://)
+* 包括：上浮、下沉、插入、获取等操作
+* [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/heap.md)
 
 
 ### 6.图
@@ -75,6 +75,7 @@
 >reference:
 * [csdn](https://blog.csdn.net/u014419014/article/details/78770812)
 * [csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
+* [cnblogs--思路清晰](https://www.cnblogs.com/JVxie/p/4859889.html)
 
 
 
