--- a/数据结构.md
+++ b/数据结构.md
@@ -41,8 +41,12 @@
 * 链表就是线性表的链式存储方式。链表的内存是不连续的, 
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/list.md)
 
-
 ### 4.树
+* 二叉树：每个节点最多有两颗子树，子树有左右之分
+* 满二叉树：除最后一层无任何节点外，每一层上所有节点都是两个
+* 完全二叉树：若树深度h,除h层，其它层节点都达到最大数两个，h层节点集中在左树上。效率最高的树。堆是一种完全二叉树。
+* 二叉查找树：又称为是二叉排序树（Binary Sort Tree）或二叉搜索树。二叉查找树的时间复杂度：它和二分查找一样，插入和查找的时间复杂度均为O(logn)，但是在最坏的情况下仍然会有O(n)的时间复杂度。原因在于插入和删除元素的时候，树没有保持平衡
+* 平衡二叉树：平衡二叉树（Balanced Binary Tree）又被称为AVL树（有别于AVL算法），且具有以下性质：它是一 棵空树或它的左右两个子树的高度差的绝对值不超过1，并且左右两个子树都是一棵平衡二叉树。平衡二叉树的常用算法有红黑树、AVL树等。在平衡二叉搜索树中，我们可以看到，其高度一般都良好地维持在O(log2n)，大大降低了操作的时间复杂度。
 
 
 ### 5.堆
@@ -76,6 +80,7 @@
 * [csdn](https://blog.csdn.net/u014419014/article/details/78770812)
 * [csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
 * [cnblogs--思路清晰](https://www.cnblogs.com/JVxie/p/4859889.html)
+* [jobbole--各种树](http://blog.jobbole.com/111680/)
 
 
 
