--- a/高可用.md
+++ b/高可用.md
@@ -190,8 +190,34 @@ c.不被队友搞死：
 * 缓存：redis天然支持主从同步，redis官方也有sentinel哨兵机制，来做redis的存活性检测，发现主redis挂了，快速转移到另一个从redis.
 * 数据库：主从同步，读写分离，使用db 连接池发现挂了，快速转移到另一个db.
 
+重点说一下 **server 服务层** 数据异构 处理。
 
-反向代理Nginx：
+##### 1.为什么要数据异构？
+  * 场景：订单、用户、供应商。两个维度查询订单信息。在大流量数据后，为了减轻单库单表的压力，采用订单表水平切分，将用户id和供应商id 冗余到订单库中，其它表同样进行冗余处理。
+  *  order1 (order_id,user_id,supplier_id) //按照order_id来分表
+  *  user1(user_id,supplier_id,order_id) //按照user_id来分表
+  *  supplier1(supplier_id,user_id,order_id) //按照supplier_id来分表
+
+#### 2.如何做到数据异构
+
+**重点：**数据异构前提保证数据有效性，即做好冗余及确保冗余准确性。
+* 查询以用户表为例：(水平切分四个用户表)
+ ~~~
+ user_id = 17,
+ 17%4 + 1 = 2,   
+ tableName := 'users'.'2'
+ Select * from users2 where id = 17;
+~~~
+* 如何做到冗余呢？
+  - 1.同步：三次db操作,订单表存储成功后，再新增用户、供应商表
+  - 2.异步(mq)：订单表存储成功后，分表发送两个消息到消息队列，用户、供应商获取到后，执行存储操作。(为了保证ms成功，将订单表与发送mq记录表放到一个事务中)
+  - 3.异步(定时服务)：订单表存储成功后，定时服务区执行用户、供应商存储
+* 如何保证冗余数据准确性
+  - 1.分表记录各自表log,针对log 增量数据比对，避免全表扫描
+  - 2.使用mq，基于发布-订阅模式，order存储成功后，发送消息后user,user成功后发送消息后supplier，如果在允许最大时间内，没有收到消息，视为本次冗余操作失败。
+* 数据异构：聚合三方数据，以kv形式存储(如Redis)，提供给前端展示。
+
+
 > reference:
 * [meituan-account](https://tech.meituan.com/dp_account_high_avaliable_road.html)
 * [meituan-pay](https://tech.meituan.com/Trade-High-Availability-in-Action.html)
