--- a/高可用.md
+++ b/高可用.md
@@ -87,8 +87,8 @@
 
 因此提升系统的可用性，就得从这两个指标入手，要么降低故障恢复的时间，要么延长不出故障的时间。
  
-*  要降低故障恢复的时间，首先得尽早的发现故障，然后才能解决故障，这些故障包括系统内和系统外的，这就需要依赖业务监控系统。即：日志收集+搜索+显示(ELK)
-* 要延长不出故障的时间，有以下方法，例如：对依赖我们的限流，我们自身要降级、回滚，我们依赖的要隔离，对于外部调用要有超时及重试机制，具体如下：
+* 要降低故障恢复的时间，首先得尽早的发现故障，然后才能解决故障，这些故障包括系统内和系统外的，这就需要依赖业务监控系统。即：日志收集+搜索+显示(ELK)
+* 要延长不出故障的时间，有以下方法，对依赖我们的 **限流**，我们自身要 **降级**、**回滚**，我们依赖的要 **隔离**，对于外部调用要有 **超时及重试机制**。
 
 ### 2.方法
 
