--- a/网络.md
+++ b/网络.md
@@ -6,6 +6,28 @@
 * [三、](#3)
 
 
+## <span id="">一、TCP/IP</span>
+### 1.TCP/IP 协议分层模型
+物理层将二进制的0和1和电压高低，光的闪灭和电波的强弱信号进行转换
+链路层代表驱动
+**网络层**
+* 使用 IP 协议，IP 协议基于 IP 转发分包数据
+* IP 协议是个不可靠协议，不会重发
+* IP 协议发送失败会使用ICMP 协议通知失败
+* ARP 解析 IP 中的 MAC 地址，MAC 地址由网卡出厂提供
+* IP 还隐含链路层的功能，不管双方底层的链路层是啥，都能通信
+**传输层**
+通用的 TCP 和 UDP 协议
+* TCP 协议面向有连接，能正确处理丢包，传输顺序错乱的问题，但是为了建立与断开连接，需要至少7次的发包收包，资源浪费
+* UDP 面向无连接，不管对方有没有收到，如果要得到通知，需要通过应用层
+会话层以上分层
+* TCP/IP 分层中，会话层，表示层，应用层集中在一起
+网络管理通过 SNMP 协议
+
+**重点**
+
+
+## 
 
 [TCP/IP](https://github.com/kgtom/go_case/blob/master/tcp/tcp%26ip.md)
 
