--- a/网络.md
+++ b/网络.md
@@ -27,3 +27,19 @@
 网络管理通过 SNMP 协议
 
 **重点**
+
+
+TCP三次握手和四次挥手？
+
+三次握手：
+
+1. 客户端–发送带有SYN标志的数据包–一次握手–服务端
+2. 服务端–发送带有SYN/ACK标志的数据包–二次握手–客户端
+3. 客户端–发送带有带有ACK标志的数据包–三次握手–服务端
+
+四次挥手：
+
+1. 客户端-发送一个FIN，用来关闭客户端到服务器的数据传送
+2. 服务器-收到这个FIN，它发回一个ACK，确认序号为收到的序号加1 。和SYN一样，一个FIN将占用一个序号
+3. 服务器-关闭与客户端的连接，发送一个FIN给客户端
+4. 客户端-发回ACK报文确认，并将确认序号设置为收到序号加1
