--- a/网络.md
+++ b/网络.md
@@ -29,7 +29,8 @@
 **重点**
 
 
-TCP三次握手和四次挥手？
+
+**TCP三次握手和四次挥手？**
 
 三次握手：
 
@@ -43,3 +44,5 @@ TCP三次握手和四次挥手？
 2. 服务器-收到这个FIN，它发回一个ACK，确认序号为收到的序号加1 。和SYN一样，一个FIN将占用一个序号
 3. 服务器-关闭与客户端的连接，发送一个FIN给客户端
 4. 客户端-发回ACK报文确认，并将确认序号设置为收到序号加1
+
+**TCP和UDP的区别**
