--- a/网络.md
+++ b/网络.md
@@ -46,3 +46,8 @@
 4. 客户端-发回ACK报文确认，并将确认序号设置为收到序号加1
 
 **TCP和UDP的区别**
+
+* tcp:先建立连接，然后再通信。例如：打电话。
+* udp:不用建立连接，直接发送，不管接收与否 例如：发短信。
+
+总结：现在微信找人，不用询问对方是否在线(tcp)，有事直接说(upd)就可以。所以提倡upd通信。
