--- a/网络.md
+++ b/网络.md
@@ -28,26 +28,34 @@
 
 **重点**
 
-
-
 **TCP三次握手和四次挥手？**
 
 三次握手：
 
-1. 客户端–发送带有SYN标志的数据包–一次握手–服务端
-2. 服务端–发送带有SYN/ACK标志的数据包–二次握手–客户端
-3. 客户端–发送带有带有ACK标志的数据包–三次握手–服务端
+1. 客户端:发送带有SYN(SYN=client_seq)标志的数据包给服务端，客户端进入SYN_SEND状态,等待服务器确认； 
+2. 服务端：发送带有SYN(SYN=server_seq)/Ack(Ack=client_seq+1)标志的数据包,服务端进入SYC_RECV状态；
+3. 客户端–发送带有Ack(Ack=server_seq+1)的数据包,两端进入ESTABLISHED状态。
+
+ps:
+* SYN：同步序列编号(Synchronize Sequence Numbers)
+* 确认序号(Acknowledgement Number)：Ack序号，对方发送seq，然后seq+1，发送给对方，表示已成功接收上次信息。
+* ACK(Acknowledgement):标志位中的 确认序号为1：确认连接了。
 
 四次挥手：
 
-1. 客户端-发送一个FIN，用来关闭客户端到服务器的数据传送
-2. 服务器-收到这个FIN，它发回一个ACK，确认序号为收到的序号加1 。和SYN一样，一个FIN将占用一个序号
-3. 服务器-关闭与客户端的连接，发送一个FIN给客户端
-4. 客户端-发回ACK报文确认，并将确认序号设置为收到序号加1
+1. 客户端:发送一个FIN，用来关闭客户端到服务器的数据传送,进入FIN_WAIT_1状态；
+2. 服务器:收到这个FIN，它发回一个ACK，客户端进入FIN_WAIT_2状态，服务端进入CLOSE_WAIT状态；
+3. 服务器：发送一个FIN给客户端，关闭与客户端连接，进入LAST_ACK
+4. 客户端：发回ACK报文确认，客户端进入TIME_WAIT，服务端进入CLOSED。
 
 **TCP和UDP的区别**
-
 * tcp:先建立连接，然后再通信。例如：打电话。
 * udp:不用建立连接，直接发送，不管接收与否 例如：发短信。
 
 总结：现在微信找人，不用询问对方是否在线(tcp)，有事直接说(upd)就可以。所以提倡upd通信。
+
+**【问题1】为什么关闭的时候需要四次握手**
+
+
+**【问题2】为什么TIME_WAIT状态需要经过2MSL(最大报文段生存时间)才能返回到CLOSE状态？**
+
