--- a/网络.md
+++ b/网络.md
@@ -54,7 +54,7 @@ ps:
 
 总结：现在微信找人，不用询问对方是否在线(tcp)，有事直接说(upd)就可以。所以提倡upd通信。
 
-**【问题1】为什么关闭的时候需要四次握手**
+**【问题1】为什么连接的时候是三次握手，关闭的时候却是四次握手？**
 
 
 **【问题2】为什么TIME_WAIT状态需要经过2MSL(最大报文段生存时间)才能返回到CLOSE状态？**
