--- a/网络.md
+++ b/网络.md
@@ -46,7 +46,7 @@ ps:
 1. 客户端:发送一个FIN，用来关闭客户端到服务器的数据传送,进入FIN_WAIT_1状态；
 2. 服务器:收到这个FIN，它发回一个ACK，客户端进入FIN_WAIT_2状态，服务端进入CLOSE_WAIT状态；
 3. 服务器：发送一个FIN给客户端，关闭与客户端连接，进入LAST_ACK
-4. 客户端：发回ACK报文确认，客户端进入TIME_WAIT，服务端进入CLOSED。
+4. 客户端：客户端发回ACK报文确认，客户端进入TIME_WAIT，客户端等待2MSL后没有收到回复就关闭了，服务端进入CLOSED。
 
 **TCP和UDP的区别**
 * tcp:先建立连接，然后再通信。例如：打电话。
@@ -55,7 +55,9 @@ ps:
 总结：现在微信找人，不用询问对方是否在线(tcp)，有事直接说(upd)就可以。所以提倡upd通信。
 
 **【问题1】为什么连接的时候是三次握手，关闭的时候却是四次握手？**
-
+因为建立连接时，接收到客户端SYN，服务端将SYN+Ack一起打包回传，而关闭连接时，则是收到客户端FIN,服务端先发送ACK确认，告诉客户端已收到FIN报文，然后等服务端发送完数据后，再发送FIN给客户端，所以关闭的时候 ACK和FIN是分开发送的。
 
 **【问题2】为什么TIME_WAIT状态需要经过2MSL(最大报文段生存时间)才能返回到CLOSE状态？**
+2MSL: 2分钟 Maximum Segment Lifetime，实际中通常设置30s、1分钟。
+因为网络是不可靠的，为了保障客户端最后一个ACK到达服务器，等待2MSL，服务端在2MSL重复第三步即：重传FIN，客户端收到后 发送ACK 最后确认，然后两者进入CLOSE状态。
 
