--- a/数据结构.md
+++ b/数据结构.md
@@ -1,15 +1,10 @@
-   
-    著名的瑞士计算机科学家沃思（N.Wirth）教授曾提出：
-    算法+数据结构=程序
-    数据结构：是指数据的逻辑结构和存储结构
-    算法：是对数据运算的描述
-    
-    
-
+  
 # 学习大纲
 * [一、生活中的数据结构](#1)
 * [二、常见的数据结构](#2)
 * [三、数据结构优缺点](#3)
+
+
 
 ## <span id="1">一、生活中数据结构</span>
 * 栈：洗盘子，洗完一个，放在前一个上面，取盘子的时候，从最后一个盘子开始取。
@@ -27,11 +22,14 @@
 **数据结构：数据之间关系及存储、组织数据的方式**
 
 
+### 0.数组
+* 内存连续，固定大小。
+* 查询O(1),插入、删除 O(n)， 因为移动其它元素插入O(n),如果插入最后一个O(1)
 ### 1、栈
 
 * 一种特殊线性结构，先进后出，只能操作与栈顶。 
+* 插入、删除只需要改变节点next的指向 O(1),查询O(n),需要逐节点查找
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/stack.md)
-
 
 ### 2、队列
 * 先进先出的线性结构
