--- a/数据结构.md
+++ b/数据结构.md
@@ -1,10 +1,7 @@
-  
 # 学习大纲
 * [一、生活中的数据结构](#1)
 * [二、常见的数据结构](#2)
 * [三、数据结构优缺点](#3)
-
-
 
 ## <span id="1">一、生活中数据结构</span>
 * 栈：洗盘子，洗完一个，放在前一个上面，取盘子的时候，从最后一个盘子开始取。
@@ -14,30 +11,29 @@
 * 集合：字典kv
 
 
-数据的逻辑结构分为线性结构和非线性结构。
-* 常用的线性结构有：线性表，栈，队列，双队列，数组，串。
-* 常见的非线性结构有：二维数组，多维数组，广义表，树(二叉树等)，图，堆。
 
 ## <span id="2">二、常见的数据结构</span>
 **数据结构：数据之间关系及存储、组织数据的方式**
-
+结合业务特点，选择合适的数据结构。
 
 ### 0.数组
 * 内存连续，固定大小。
 * 查询O(1),插入、删除 O(n)， 因为移动其它元素插入O(n),如果插入最后一个O(1)
 ### 1、栈
 
-* 一种特殊线性结构，先进后出，只能操作与栈顶。 
+* 一种特殊线性结构，先进后出，查询、插入和删除只能在栈顶进行 
 * 插入、删除只需要改变节点next的指向 O(1),查询O(n),需要逐节点查找
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/stack.md)
 
+
 ### 2、队列
-* 先进先出的线性结构
+* 先进先出的线性结构，队尾插入，对头访问和删除
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/queue.md)
 
 ### 3.链表
-* 链表就是线性表的链式存储方式。链表的内存是不连续的, 
+* 链表就是线性表的链式存储方式。链表的内存是不连续的
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/list.md)
+
 
 ### 4.树
 * 二叉树：每个节点最多有两颗子树，子树有左右之分
