--- a/数据结构.md
+++ b/数据结构.md
@@ -36,19 +36,21 @@
 
 
 ### 4.树
-* 二叉树：每个节点最多有两颗子树，子树有左右之分
-* 满二叉树：除最后一层无任何节点外，每一层上所有节点都是两个
-* 完全二叉树：若树深度h,除h层，其它层节点都达到最大数两个，h层节点集中在左树上。效率最高的树。堆是一种完全二叉树。
+* 树：有>=0个子节点，没有左右之分
+* 二叉树：每个节点最多有两个子树，子树有左右之分，通常用于二叉树查找和二叉堆。
+ 深度为k的二叉树总节点最多有2^k-1个节点。（等比数列 1+2+4+…+2^(k-1) = 2^k-1）
+* 满二叉树：除最后一层无任何节点外，每一层上所有节点都是两个，深度为k,总节点 2^k-1个节点，总节点为奇数，若总节点为n,则数高h(或者深度k)=log2^(n+1),第k层上节点为 2^(k-1)个。
+* 完全二叉树：若树深度h,除h层，其它层节点都达到最大数两个，h层节点集中在左树上。效率最高的树。**满二叉树一定是完全二叉树，完全二叉树不一定是满二叉树**。堆是一种完全二叉树。树高h=log2^n + 1，总节点最多有2^k-1个节点。
 * 二叉查找树：又称为是二叉排序树（Binary Sort Tree）或二叉搜索树。二叉查找树的时间复杂度：它和二分查找一样，插入和查找的时间复杂度均为O(logn)，但是在最坏的情况下仍然会有O(n)的时间复杂度。原因在于插入和删除元素的时候，树没有保持平衡
 * 平衡二叉树：平衡二叉树（Balanced Binary Tree）又被称为AVL树（有别于AVL算法），且具有以下性质：它是一 棵空树或它的左右两个子树的高度差的绝对值不超过1，并且左右两个子树都是一棵平衡二叉树。平衡二叉树的常用算法有红黑树、AVL树等。在平衡二叉搜索树中，我们可以看到，其高度一般都良好地维持在O(log2n)，大大降低了操作的时间复杂度。
 * B树也是一种用于查找的平衡树，但是它不是二叉树。从根节点搜索--->左节点--->右节点
 * B+树是B树的变体，也是一种多路搜索树。
-* B*树是B+树的变体，在B+树的非根和非叶子结点再增加指向兄弟的指针，将结点的最低利用率从1/2提高到2/3。
+* B*树是B+树的变体，在B+树的非根和非叶子节点再增加指向兄弟的指针，将节点的最低利用率从1/2提高到2/3。
 * Tire树称为字典树，又称单词查找树，Trie树，是一种树形结构，是一种哈希树的变种。典型应用是用于统计，排序和保存大量的字符串（但不仅限于字符串），所以经常被搜索引擎系统用于文本词频统计
 
 
 ### 5.堆
-* 堆实际上是一颗 完全二叉树 ，它满足父结点大于（或小于）子结点特性。父结点大于子结点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父结点小于子结点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
+* 堆实际上是一颗 完全二叉树 ，它满足父节点大于（或小于）子节点特性。父节点大于子节节点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父节点小于子节点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
 * 包括：上浮、下沉、插入、获取等操作
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/heap.md)
 
