--- a/数据结构.md
+++ b/数据结构.md
@@ -36,6 +36,8 @@
 
 
 ### 4.树
+
+#### 1.各种树概念
 * 树：有>=0个子节点，没有左右之分
 * 二叉树：每个节点最多有两个子树，子树有左右之分，通常用于二叉树查找和二叉堆。
  深度为k的二叉树总节点最多有2^k-1个节点。（等比数列 1+2+4+…+2^(k-1) = 2^k-1）
@@ -48,7 +50,170 @@
 * B*树是B+树的变体，在B+树的非根和非叶子节点再增加指向兄弟的指针，将节点的最低利用率从1/2提高到2/3。
 * Tire树称为字典树，又称单词查找树，Trie树，是一种树形结构，是一种哈希树的变种。典型应用是用于统计，排序和保存大量的字符串（但不仅限于字符串），所以经常被搜索引擎系统用于文本词频统计
 
+#### 2.二叉树的四种遍历方法
 
+分深度遍历和广度优先遍历，其中深度遍历包括前序、中序、后序，广度优先遍历就是层次遍历实际就是前序遍历。
+* 1.前序遍历:中左右
+
+~~~go
+package main
+
+import (
+	"fmt"
+	"sync"
+)
+
+func main() {
+
+	//将二叉树按照前序遍历输出到[]int中
+
+	tree := &TreeNode{
+		Val: 1,
+		//Left: &TreeNode{
+		//	Val: 4,
+		//},
+		Right: &TreeNode{
+			Val: 2,
+			Left: &TreeNode{
+				Val: 3,
+			},
+		},
+	}
+	ret := preorderTraversal(tree)
+	fmt.Println("ret:", ret)
+
+}
+
+// TreeNode
+type TreeNode struct {
+	Val   int
+	Left  *TreeNode
+	Right *TreeNode
+}
+
+type Stack struct {
+	lock sync.Mutex
+	node []*TreeNode
+}
+
+func NewStack() *Stack {
+
+	return &Stack{lock: sync.Mutex{}, node: []*TreeNode{}}
+}
+
+func (s *Stack) Push(node *TreeNode) {
+	s.lock.Lock()
+	defer s.lock.Unlock()
+
+	s.node = append(s.node, node)
+}
+
+func (s *Stack) Pop() *TreeNode {
+	s.lock.Lock()
+
+	defer s.lock.Unlock()
+	n := len(s.node)
+	if n == 0 {
+		return nil
+	}
+	ret := s.node[n-1]
+	s.node = s.node[:(n - 1)]
+
+	return ret
+}
+
+//二叉树前序遍历：时间复杂度O(n) 空间复杂度(n)
+func preorderTraversal(tree *TreeNode) []int {
+
+	s := NewStack()
+
+	//将tree,push 到栈里面
+	s.Push(tree)
+	ret := []int{}
+
+	//使用stack 栈，注意其特性，先进后出。
+
+	for len(s.node) != 0 {
+
+		//获取当前节点,首次实际就是根节点值
+		curr := s.Pop()
+		ret = append(ret, curr.Val)
+
+		//如果当前节点存在右节点，则入栈
+		//如果当前节点存在左节点，则入栈
+		//先 push right节点，后 push left,是因为栈的特性：先进后出，又因为前序遍历，需要先让左节点出来，后右节点出来。
+		if curr.Right != nil {
+			s.Push(curr.Right)
+		}
+		if curr.Left != nil {
+			s.Push(curr.Left)
+		}
+
+	}
+	fmt.Println("len:", len(s.node)) //0
+	return ret
+}
+
+
+~~~
+* 2.中序遍历：左中右
+* 3.后序遍历：左右中
+* 4.层序遍历：从顶而下逐层遍历，每一层遵循从左向右。
+
+#### 3.数组转换成tree
+~~~go
+package main
+
+import (
+	"fmt"
+)
+
+func main() {
+
+	arr := []int{1, 4, 2, 3}
+	ret := Ints2TreeNode(arr)
+	fmt.Println("ret:", ret)
+}
+
+//将 []ints 转换成tree,根据前序遍历，中左右
+func Ints2TreeNode(ints []int) *TreeNode {
+	n := len(ints)
+	if n == 0 {
+		return nil
+	}
+
+	root := &TreeNode{
+		Val: ints[0],
+	}
+
+	tempArr := make([]*TreeNode, 1)
+	//先取根节点
+	tempArr[0] = root
+
+	i := 1
+	for i < n {
+		//每次都取第一个，作为下一个节点的根节点。
+		node := tempArr[0]
+		tempArr = tempArr[1:]
+		if i < n && ints[i] != 0 {
+			//先给左节点，再给右节点，本例子按照前序遍历，中左右
+			node.Left = &TreeNode{Val: ints[i]}
+			tempArr = append(tempArr, node.Left)
+		}
+		i++
+
+		if i < n && ints[i] != 0 {
+			//再给右节点
+			node.Right = &TreeNode{Val: ints[i]}
+			tempArr = append(tempArr, node.Right)
+		}
+		i++
+	}
+
+	return root
+}
+
+~~~
 ### 5.堆
 * 堆实际上是一颗 完全二叉树 ，它满足父节点大于（或小于）子节点特性。父节点大于子节节点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父节点小于子节点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
 * 包括：上浮、下沉、插入、获取等操作
