--- a/数据结构.md
+++ b/数据结构.md
@@ -160,6 +160,12 @@ func preorderTraversal(tree *TreeNode) []int {
 * 3.后序遍历：左右中
 * 4.层序遍历：从顶而下逐层遍历，每一层遵循从左向右。
 
+**总结:**
+* 先序遍历是中左右，先获取到中，然后在深入时按照右左顺序push，这样出栈就是左右了。
+* 中序遍历是在从左子树开始深入，不能再深入了，就返回，返回时遇到结点就访问，即：左节点不能再深入的就是起点。
+* 后序遍历是从右子树返回时遇到结点就访问 
+在这一过程中，先访问的数据后输出，也就是最后访问的先输出，正好符合 stack 结构先进后出的特点。由此，可以利用 stack 实现这一遍历路线
+
 #### 3.数组转换成tree
 ~~~go
 package main
