--- a/数据结构.md
+++ b/数据结构.md
@@ -43,7 +43,7 @@
  深度为k的二叉树总节点最多有2^k-1个节点。（等比数列 1+2+4+…+2^(k-1) = 2^k-1）
 * 满二叉树：除最后一层无任何节点外，每一层上所有节点都是两个，深度为k,总节点 2^k-1个节点，总节点为奇数，若总节点为n,则数高h(或者深度k)=log2^(n+1),第k层上节点为 2^(k-1)个。
 * 完全二叉树：若树深度h,除h层，其它层节点都达到最大数两个，h层节点集中在左树上。效率最高的树。**满二叉树一定是完全二叉树，完全二叉树不一定是满二叉树**。堆是一种完全二叉树。树高h=log2^n + 1，总节点最多有2^k-1个节点。
-* 二叉查找树：又称为是二叉排序树（Binary Sort Tree）或二叉搜索树。二叉查找树的时间复杂度：它和二分查找一样，插入和查找的时间复杂度均为O(logn)，但是在最坏的情况下仍然会有O(n)的时间复杂度。原因在于插入和删除元素的时候，树没有保持平衡
+* 二叉查找树：又称为是二叉排序树（Binary Sort Tree）或二叉搜索树。
 * 平衡二叉树：平衡二叉树（Balanced Binary Tree）又被称为AVL树（有别于AVL算法），且具有以下性质：它是一 棵空树或它的左右两个子树的高度差的绝对值不超过1，并且左右两个子树都是一棵平衡二叉树。平衡二叉树的常用算法有红黑树、AVL树等。在平衡二叉搜索树中，我们可以看到，其高度一般都良好地维持在O(log2n)，大大降低了操作的时间复杂度。
 * B树也是一种用于查找的平衡树，但是它不是二叉树。从根节点搜索--->左节点--->右节点
 * B+树是B树的变体，也是一种多路搜索树。
@@ -54,111 +54,20 @@
 
 分深度遍历和广度优先遍历，其中深度遍历包括前序、中序、后序，广度优先遍历就是层次遍历实际就是前序遍历。
 * 1.前序遍历:中左右
-
-~~~go
-package main
-
-import (
-	"fmt"
-	"sync"
-)
-
-func main() {
-
-	//将二叉树按照前序遍历输出到[]int中
-
-	tree := &TreeNode{
-		Val: 1,
-		//Left: &TreeNode{
-		//	Val: 4,
-		//},
-		Right: &TreeNode{
-			Val: 2,
-			Left: &TreeNode{
-				Val: 3,
-			},
-		},
-	}
-	ret := preorderTraversal(tree)
-	fmt.Println("ret:", ret)
-
-}
-
-// TreeNode
-type TreeNode struct {
-	Val   int
-	Left  *TreeNode
-	Right *TreeNode
-}
-
-type Stack struct {
-	lock sync.Mutex
-	node []*TreeNode
-}
-
-func NewStack() *Stack {
-
-	return &Stack{lock: sync.Mutex{}, node: []*TreeNode{}}
-}
-
-func (s *Stack) Push(node *TreeNode) {
-	s.lock.Lock()
-	defer s.lock.Unlock()
-
-	s.node = append(s.node, node)
-}
-
-func (s *Stack) Pop() *TreeNode {
-	s.lock.Lock()
-
-	defer s.lock.Unlock()
-	n := len(s.node)
-	if n == 0 {
-		return nil
-	}
-	ret := s.node[n-1]
-	s.node = s.node[:(n - 1)]
-
-	return ret
-}
-
-//二叉树前序遍历：时间复杂度O(n) 空间复杂度(n)
-func preorderTraversal(tree *TreeNode) []int {
-
-	s := NewStack()
-
-	//将tree,push 到栈里面
-	s.Push(tree)
-	ret := []int{}
-
-	//使用stack 栈，注意其特性，先进后出。
-
-	for len(s.node) != 0 {
-
-		//获取当前节点,首次实际就是根节点值
-		curr := s.Pop()
-		ret = append(ret, curr.Val)
-
-		//如果当前节点存在右节点，则入栈
-		//如果当前节点存在左节点，则入栈
-		//先 push right节点，后 push left,是因为栈的特性：先进后出，又因为前序遍历，需要先让左节点出来，后右节点出来。
-		if curr.Right != nil {
-			s.Push(curr.Right)
-		}
-		if curr.Left != nil {
-			s.Push(curr.Left)
-		}
-
-	}
-	fmt.Println("len:", len(s.node)) //0
-	return ret
-}
-
-
-~~~
 * 2.中序遍历：左中右
 * 3.后序遍历：左右中
 * 4.层序遍历：从顶而下逐层遍历，每一层遵循从左向右。
+ [代码地址](http://tree-order-traversal)
+ 
+ #### 3.二叉查找树
+ * 1.性能分析：给定的值相同但顺序不同时，组合二叉树的形态不同，查找时间复杂度也就不同了。
+![bst](/content/images/2018/11/bst.jpg)
+  ** 左图是bst树以扇形结构散开，时间复杂度：它和二分查找一样，插入、删除、查找的时间复杂度均为O(logn)
+  ** 右图bst树不是以扇形结构散开，是一颗单支树，这种查找类似于数组查找，是O(n)，原因在于插入和删除元素的时候，树没有保持两边平衡，而是单支树
+  **总结** 查找复杂度取决于树的拓扑结构，最佳 O(logn),最差O(n)
+* 2.二叉树新增、排序、查找、修改、删除操作
+
+
 
 **总结:**
 * 先序遍历是中左右，先获取到中，然后在深入时按照右左顺序push，这样出栈就是左右了。
