--- a/数据结构.md
+++ b/数据结构.md
@@ -57,11 +57,11 @@
 * 2.中序遍历：左中右
 * 3.后序遍历：左右中
 * 4.层序遍历：从顶而下逐层遍历，每一层遵循从左向右。
- [代码地址](http://tree-order-traversal)
+ [代码地址](http://39.106.173.209:88/tree-order-traversal/)
  
  #### 3.二叉查找树
  * 1.性能分析：给定的值相同但顺序不同时，组合二叉树的形态不同，查找时间复杂度也就不同了。
-![bst](/content/images/2018/11/bst.jpg)
+![bst](https://github.com/kgtom/back-end/blob/master/pic/bst.jpg)
   ** 左图是bst树以扇形结构散开，时间复杂度：它和二分查找一样，插入、删除、查找的时间复杂度均为O(logn)
   ** 右图bst树不是以扇形结构散开，是一颗单支树，这种查找类似于数组查找，是O(n)，原因在于插入和删除元素的时候，树没有保持两边平衡，而是单支树
   **总结** 查找复杂度取决于树的拓扑结构，最佳 O(logn),最差O(n)
