--- a/数据结构.md
+++ b/数据结构.md
@@ -57,7 +57,7 @@
 * 2.中序遍历：左中右
 * 3.后序遍历：左右中
 * 4.层序遍历：从顶而下逐层遍历，每一层遵循从左向右。
- [代码地址](http://39.106.173.209:88/tree-order-traversal/)
+ [代码地址](http://39.106.173.209:88/btree-code/)
  
  #### 3.二叉查找树
  * 1.性能分析：给定的值相同但顺序不同时，组合二叉树的形态不同，查找时间复杂度也就不同了。
@@ -76,59 +76,8 @@
 在这一过程中，先访问的数据后输出，也就是最后访问的先输出，正好符合 stack 结构先进后出的特点。由此，可以利用 stack 实现这一遍历路线
 
 #### 3.数组转换成tree
-~~~go
-package main
-
-import (
-	"fmt"
-)
-
-func main() {
-
-	arr := []int{1, 4, 2, 3}
-	ret := Ints2TreeNode(arr)
-	fmt.Println("ret:", ret)
-}
-
-//将 []ints 转换成tree,根据前序遍历，中左右
-func Ints2TreeNode(ints []int) *TreeNode {
-	n := len(ints)
-	if n == 0 {
-		return nil
-	}
-
-	root := &TreeNode{
-		Val: ints[0],
-	}
-
-	tempArr := make([]*TreeNode, 1)
-	//先取根节点
-	tempArr[0] = root
-
-	i := 1
-	for i < n {
-		//每次都取第一个，作为下一个节点的根节点。
-		node := tempArr[0]
-		tempArr = tempArr[1:]
-		if i < n && ints[i] != 0 {
-			//先给左节点，再给右节点，本例子按照前序遍历，中左右
-			node.Left = &TreeNode{Val: ints[i]}
-			tempArr = append(tempArr, node.Left)
-		}
-		i++
-
-		if i < n && ints[i] != 0 {
-			//再给右节点
-			node.Right = &TreeNode{Val: ints[i]}
-			tempArr = append(tempArr, node.Right)
-		}
-		i++
-	}
-
-	return root
-}
-
-~~~
+ [代码地址](http://39.106.173.209:88/btree-code/)
+ 
 ### 5.堆
 * 堆实际上是一颗 完全二叉树 ，它满足父节点大于（或小于）子节点特性。父节点大于子节节点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父节点小于子节点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
 * 包括：上浮、下沉、插入、获取等操作
