--- a/数据结构.md
+++ b/数据结构.md
@@ -67,6 +67,21 @@
   **总结** 查找复杂度取决于树的拓扑结构，最佳 O(logn),最差O(n)
 * 2.二叉树新增、排序、查找、修改、删除操作
 
+ [代码地址](http://39.106.173.209:88/btree-code/)
+ 
+ ### 4.平衡二叉树
+ 一个二叉树每个节点 的左右两个子树的高度差的绝对值不超过1。
+ 
+ [代码地址](http://39.106.173.209:88/btree-code/)
+
+**总结:**
+* 先序遍历是中左右，先获取到中，然后在深入时按照右左顺序push，这样出栈就是左右了。
+* 中序遍历是在从左子树开始深入，不能再深入了，就返回，返回时遇到结点就访问，即：左节点不能再深入的就是起点。
+* 后序遍历是从右子树返回时遇到结点就访问 
+在这一过程中，先访问的数据后输出，也就是最后访问的先输出，正好符合 stack 结构先进后出的特点。由此，可以利用 stack 实现这一遍历路线
+
+#### 3.数组转换成tree
+ [代码地址](http://39.106.173.209:88/btree-code/)
 
 
 **总结:**
