--- a/数据结构.md
+++ b/数据结构.md
@@ -1,6 +1,14 @@
 # 学习大纲
 * [一、生活中的数据结构](#1)
 * [二、常见的数据结构](#2)
+  - 0.数组
+  - 1.栈
+  - 2.队列
+  - 3.链表
+  - 4.树、二叉树、二叉搜索树
+  - 5.优先队列
+  - 6.堆
+  - 7.图
 * [三、数据结构优缺点](#3)
 
 ## <span id="1">一、生活中数据结构</span>
