--- a/数据结构.md
+++ b/数据结构.md
@@ -5,7 +5,7 @@
   - 1.栈
   - 2.队列
   - 3.链表
-  - 4.树、二叉树、二叉搜索树
+  - 4.树、二叉树、二叉搜索树、红黑树
   - 5.优先队列
   - 6.堆
   - 7.图
@@ -46,17 +46,17 @@
 ### 4.树
 
 #### 1.各种树概念
-* 树：有>=0个子节点，没有左右之分
-* 二叉树：每个节点最多有两个子树，子树有左右之分，通常用于二叉树查找和二叉堆。
+* **树**：有>=0个子节点，没有左右之分
+* **二叉树**：每个节点最多有两个子树，子树有左右之分，通常用于二叉树查找和二叉堆。
  深度为k的二叉树总节点最多有2^k-1个节点。（等比数列 1+2+4+…+2^(k-1) = 2^k-1）
-* 满二叉树：除最后一层无任何节点外，每一层上所有节点都是两个，深度为k,总节点 2^k-1个节点，总节点为奇数，若总节点为n,则数高h(或者深度k)=log2^(n+1),第k层上节点为 2^(k-1)个。
-* 完全二叉树：若树深度h,除h层，其它层节点都达到最大数两个，h层节点集中在左树上。效率最高的树。**满二叉树一定是完全二叉树，完全二叉树不一定是满二叉树**。堆是一种完全二叉树。树高h=log2^n + 1，总节点最多有2^k-1个节点。
-* 二叉查找树：又称为是二叉排序树（Binary Sort Tree）或二叉搜索树。
-* 平衡二叉树：平衡二叉树（Balanced Binary Tree）又被称为AVL树（有别于AVL算法），且具有以下性质：它是一 棵空树或它的左右两个子树的高度差的绝对值不超过1，并且左右两个子树都是一棵平衡二叉树。平衡二叉树的常用算法有红黑树、AVL树等。在平衡二叉搜索树中，我们可以看到，其高度一般都良好地维持在O(log2n)，大大降低了操作的时间复杂度。
-* B树也是一种用于查找的平衡树，但是它不是二叉树。从根节点搜索--->左节点--->右节点
-* B+树是B树的变体，也是一种多路搜索树。
-* B*树是B+树的变体，在B+树的非根和非叶子节点再增加指向兄弟的指针，将节点的最低利用率从1/2提高到2/3。
-* Tire树称为字典树，又称单词查找树，Trie树，是一种树形结构，是一种哈希树的变种。典型应用是用于统计，排序和保存大量的字符串（但不仅限于字符串），所以经常被搜索引擎系统用于文本词频统计
+* **满二叉树**：除最后一层无任何节点外，每一层上所有节点都是两个，深度为k,总节点 2^k-1个节点，总节点为奇数，若总节点为n,则数高h(或者深度k)=log2^(n+1),第k层上节点为 2^(k-1)个。
+* **完全二叉树**：若树深度h,除h层，其它层节点都达到最大数两个，h层节点集中在左树上。效率最高的树。**满二叉树一定是完全二叉树，完全二叉树不一定是满二叉树**。堆是一种完全二叉树。树高h=log2^n + 1，总节点最多有2^k-1个节点。
+* **二叉查找树**：又称为是二叉排序树（Binary Sort Tree）或二叉搜索树。
+* **平衡二叉树**：平衡二叉树（Balanced Binary Tree）又被称为AVL树（有别于AVL算法），且具有以下性质：它是一 棵空树或它的左右两个子树的高度差的绝对值不超过1，并且左右两个子树都是一棵平衡二叉树。平衡二叉树的常用算法有红黑树、AVL树等。在平衡二叉搜索树中，我们可以看到，其高度一般都良好地维持在O(log2n)，大大降低了操作的时间复杂度。
+* **B树**也是一种用于查找的平衡树，但是它不是二叉树。从根节点搜索--->左节点--->右节点
+* **B+树** 是B树的变体，也是一种多路搜索树。
+* **B*树** 是B+树的变体，在B+树的非根和非叶子节点再增加指向兄弟的指针，将节点的最低利用率从1/2提高到2/3。
+* **Tire树** 称为字典树，又称单词查找树，Trie树，是一种树形结构，是一种哈希树的变种。典型应用是用于统计，排序和保存大量的字符串（但不仅限于字符串），所以经常被搜索引擎系统用于文本词频统计
 
 #### 2.二叉树的四种遍历方法
 
@@ -69,7 +69,7 @@
  
  #### 3.二叉查找树
  * 1.性能分析：给定的值相同但顺序不同时，组合二叉树的形态不同，查找时间复杂度也就不同了。
-![bst](https://github.com/kgtom/back-end/blob/master/pic/bst.jpg)
+![bst](/content/images/2018/11/bst.jpg)
   ** 左图是bst树以扇形结构散开，时间复杂度：它和二分查找一样，插入、删除、查找的时间复杂度均为O(logn)
   ** 右图bst树不是以扇形结构散开，是一颗单支树，这种查找类似于数组查找，是O(n)，原因在于插入和删除元素的时候，树没有保持两边平衡，而是单支树
   **总结** 查找复杂度取决于树的拓扑结构，最佳 O(logn),最差O(n)
@@ -77,39 +77,42 @@
 
  [代码地址](http://39.106.173.209:88/btree-code/)
  
- ### 4.平衡二叉树
+ #### 4.平衡二叉树
  一个二叉树每个节点 的左右两个子树的高度差的绝对值不超过1。
  
  [代码地址](http://39.106.173.209:88/btree-code/)
 
+#### 5.红黑树
+红黑树是平衡二叉树的一种，它保证在最坏情况下基本动态集合操作的事件复杂度为O(log n)。
+ * 红黑树 放弃追求完全平衡
+ * 平衡二叉树 追求完全平衡
 **总结:**
 * 先序遍历是中左右，先获取到中，然后在深入时按照右左顺序push，这样出栈就是左右了。
 * 中序遍历是在从左子树开始深入，不能再深入了，就返回，返回时遇到结点就访问，即：左节点不能再深入的就是起点。
 * 后序遍历是从右子树返回时遇到结点就访问 
 在这一过程中，先访问的数据后输出，也就是最后访问的先输出，正好符合 stack 结构先进后出的特点。由此，可以利用 stack 实现这一遍历路线
 
-#### 3.数组转换成tree
- [代码地址](http://39.106.173.209:88/btree-code/)
-
-
-**总结:**
-* 先序遍历是中左右，先获取到中，然后在深入时按照右左顺序push，这样出栈就是左右了。
-* 中序遍历是在从左子树开始深入，不能再深入了，就返回，返回时遇到结点就访问，即：左节点不能再深入的就是起点。
-* 后序遍历是从右子树返回时遇到结点就访问 
-在这一过程中，先访问的数据后输出，也就是最后访问的先输出，正好符合 stack 结构先进后出的特点。由此，可以利用 stack 实现这一遍历路线
-
-#### 3.数组转换成tree
+#### 6.数组转换成tree
  [代码地址](http://39.106.173.209:88/btree-code/)
  
-### 5.堆
+### 5.优先队列
+ 
+ 优先队列是一种用来维护由一组元素构成的集合S的数据结构，其中的每一个元素都有一个相关的值，称为关键字。优先队列也分为两种：最大优先队列和最小优先队列。
+ 
+### 6.堆
 * 堆实际上是一颗 完全二叉树 ，它满足父节点大于（或小于）子节点特性。父节点大于子节节点称为最大堆（arr[i]>=arr[2i] && arr[i]>=array[2i+1]），父节点小于子节点称为最小堆（arr[i]<=arr[2i] && arr[i]<=arr[2i+1]）
 * 包括：上浮、下沉、插入、获取等操作
 * [代码地址链接](https://github.com/kgtom/back-end/blob/master/leetcode/heap.md)
 
 
-### 6.图
-* 图是描述事物之间关系的
-* [代码地址链接](http://)
+### 7.图
+* 图是一种较线性表和树更为复杂的数据结构，
+* 在线性表中，数据元素之间仅有线性关系，
+* 在树形结构中，数据元素之间有着明显的层次关系，
+* 而在图形结构中，节点之间的关系可以是任意的，图中任意两个数据元素之间都可能相关。
+* 图的应用相当广泛，特别是近年来的迅速发展，已经渗入到诸如语言学、逻辑学、物理、化学、电讯工程、计算机科学以及数学的其他分支中。
+
+
 
 ## <span id="3">三、数据结构优缺点</span>
 
@@ -133,6 +136,7 @@
 * [csdn](https://blog.csdn.net/qq_15654993/article/details/75267581)
 * [cnblogs--思路清晰](https://www.cnblogs.com/JVxie/p/4859889.html)
 * [jobbole--各种树](http://blog.jobbole.com/111680/)
+* [jianshu](https://www.jianshu.com/p/230e6fde9c75)
 
 
 
