--- a/算法.md
+++ b/算法.md
@@ -1,12 +1,54 @@
+## 学习大纲
+* [一、概况](#1)
+* [二、查找算法](#2)
+ -  二分查找
+ -  顺序查找
+ -  插入查找
+ -  斐波那契查找
+* [三、排序算法](#3)
+   - 冒泡
+   - 选择
+   - 插入
+   - 希尔
+   - 归并
+   - 快排
+   - 堆排序
+ 
+* [四、Depth-first search 深度优先搜索](#4)
+   - 695-max-area-of-island
+   - 79-word-search
+* [五、Breadth-first search 广度优先搜索](#5)
+* [六、Recursion/Backtrcae 递归 回溯](#6)
+* [七、Dynamic Programming 动态规划法](#7)
+   - 64-minimum-path-sum
+* [八、Divide and conquer分治法](#8)
+* [九、Greedy贪心算法](#9)
+ - 122
 
-  
-  # 前言
-  
-    著名的瑞士计算机科学家沃思（N.Wirth）教授曾提出：
-    算法+数据结构=程序
-    数据结构：是指数据的逻辑结构和存储结构
-    算法：是对数据运算的描述
-    
-  # 学习大纲
-  
-    
+* [十、Graph图](#10)
+* [十一、总结](#11)
+## <span id="1">一、概况</span>
+ * 语言只是工具，算法才是程序设计的灵魂.
+ * 算法就是一种解决方案。针对一个问题，可以采取不同的算法去解决。为了衡量算法的优劣，提出时间复杂度和空间复杂度两个指标。
+ * 时间复杂度指的是语句执行次数，空间复杂度指的是算法执行所占的存储空间。
+ 
+~~~ 
+O(1) 常数: n:=10 
+就是最低的时空复杂度了，也就是耗时/耗空间与输入数据大小无关，无论输入数据增大多少倍，耗时/耗空间都不变。 哈希算法就是典型的O(1)时间复杂度，无论数据规模多大，都可以在一次计算后找到目标
+
+O(n) 线性: 一个for 循环 for  i<n:
+就代表数据量增大几倍，耗时也增大几倍。比如常见的遍历算法。
+O(n^2): 平方 嵌套循环 for{ for }：
+就代表数据量增大n倍时，耗时增大n的平方倍，这是比线性更高的时间复杂度。比如冒泡排序，就是典型的O(n^2)的算法，对n个数排序，需要扫描n×n次。
+
+O(n^3): 立方 嵌套循环 for{ for }
+O(log2): 对数 i*2
+当数据增大n倍时，耗时增大logn倍（这里的log是以2为底的，比如，当数据增大256倍时，耗时只增大8倍，是比线性还要低的时间复杂度）。二分查找就是O(logn)的算法，每找一次排除一半的可能，256个数据中查找只要找8次就可以找到目标。
+O(nlog2):就是n乘以logn，当数据增大256倍时，耗时增大256*8=2048倍。这个复杂度高于线性低于平方。归并排序就是O(nlogn)的时间复杂度。 
+O(n!)阶乘
+~~~
+
+## <span id="2">二、查找算法</span>
+### 1.顺序查找
+
+### 2.二分查找
