--- a/算法.md
+++ b/算法.md
@@ -1,10 +1,10 @@
 ## 学习大纲
 * [一、概况](#1)
 * [二、查找算法](#2)
- -  二分查找
- -  顺序查找
- -  插入查找
- -  斐波那契查找
+     -  二分查找
+     -  顺序查找
+     -  插入查找
+     -  斐波那契查找
 * [三、排序算法](#3)
    - 冒泡
    - 选择
@@ -14,16 +14,16 @@
    - 快排
    - 堆排序
  
-* [四、Depth-first search 深度优先搜索](#4)
-   - 695-max-area-of-island
-   - 79-word-search
-* [五、Breadth-first search 广度优先搜索](#5)
+* [四、Depth-first search(DFS)深度优先搜索](#4)
+       - 695-max-area-of-island
+       - 79-word-search
+* [五、Breadth-first search(BFS)广度优先搜索](#5)
 * [六、Recursion/Backtrcae 递归 回溯](#6)
 * [七、Dynamic Programming 动态规划法](#7)
    - 64-minimum-path-sum
 * [八、Divide and conquer分治法](#8)
 * [九、Greedy贪心算法](#9)
- - 122
+     - 122
 
 * [十、Graph图](#10)
 * [十一、总结](#11)
@@ -52,3 +52,31 @@ O(n!)阶乘
 ### 1.顺序查找
 
 ### 2.二分查找
+
+
+## <span id="3">三、排序算法</span>
+### 1.冒泡排序
+
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/bubbleSort.go)
+### 2.选择算法
+
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/selectionSort.go)
+
+
+### 3.插入排序
+
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/insertionSort.go)
+
+### 4.希尔排序
+
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/shellSort.go)
+
+### 5.归并排序
+
+
+### 6.快速排序
+
+## <span id="4">四、Depth-first search(DFS)深度优先搜索</span>
+
+
+## <span id="5">五、Breadth-first search(BFS)广度优先搜索</span>
