--- a/算法.md
+++ b/算法.md
@@ -52,7 +52,7 @@ O(n!)阶乘
 ### 1.顺序查找
 
 ### 2.二分查找
-
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/searching/binarySearch.go)
 
 ## <span id="3">三、排序算法</span>
 ### 1.冒泡排序
@@ -72,10 +72,10 @@ O(n!)阶乘
 [代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/shellSort.go)
 
 ### 5.归并排序
-
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/mergeSort.go)
 
 ### 6.快速排序
-
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/quickSort.go)
 ## <span id="4">四、Depth-first search(DFS)深度优先搜索</span>
 
 
