--- a/算法.md
+++ b/算法.md
@@ -1,18 +1,18 @@
 ## 学习大纲
 * [一、概况](#1)
 * [二、查找算法](#2)
-     -  二分查找
-     -  顺序查找
-     -  插入查找
-     -  斐波那契查找
+     -  [二分查找](#21)
+     -  [顺序查找](#22)
+     -  [插入查找](#23)
+     -  [斐波那契查找](#24)
 * [三、排序算法](#3)
-   - 冒泡
-   - 选择
-   - 插入
-   - 希尔
-   - 归并
-   - 快排
-   - 堆排序
+   - [冒泡](#31)
+   - [选择](#32)
+   - [插入](#33)
+   - [希尔](#34)
+   - [归并](#35)
+   - [快排](#36)
+   - [堆排序](#37)
  
 * [四、Depth-first search(DFS)深度优先搜索](#4)
        - 695-max-area-of-island
@@ -49,10 +49,16 @@ O(n!)阶乘
 ~~~
 
 ## <span id="2">二、查找算法</span>
-### 1.顺序查找
 
-### 2.二分查找
+
+### <span id="21">1.二分查找<span>
 [代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/searching/binarySearch.go)
+    
+### 2.顺序查找
+
+### 3.插入查找
+
+### 4.斐波那契查找
 
 ## <span id="3">三、排序算法</span>
 ### 1.冒泡排序
