--- a/算法.md
+++ b/算法.md
@@ -54,11 +54,11 @@ O(n!)阶乘
 ### <span id="21">1.二分查找<span>
 [代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/searching/binarySearch.go)
     
-### 2.顺序查找
+### <span id="22">2.顺序查找</span>
 
-### 3.插入查找
+### <span id="23">3.插入查找</span>
 
-### 4.斐波那契查找
+### <span id="24">4.斐波那契查找</span>
 
 ## <span id="3">三、排序算法</span>
 ### 1.冒泡排序
