--- a/算法.md
+++ b/算法.md
@@ -13,6 +13,7 @@
    - [归并](#35)
    - [快排](#36)
    - [堆排序](#37)
+   - [计数排序](#38)
  
 * [四、Depth-first search(DFS)深度优先搜索](#4)
        - 695-max-area-of-island
@@ -82,6 +83,11 @@ O(n!)阶乘
 
 ### 6.快速排序
 [代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/quickSort.go)
+
+### 7.堆排序
+
+### <span id="38">8.计数排序</span>
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/sorting/countSort.go)
 ## <span id="4">四、Depth-first search(DFS)深度优先搜索</span>
 
 
