--- a/算法.md
+++ b/算法.md
@@ -32,6 +32,8 @@
  * 语言只是工具，算法才是程序设计的灵魂.
  * 算法就是一种解决方案。针对一个问题，可以采取不同的算法去解决。为了衡量算法的优劣，提出时间复杂度和空间复杂度两个指标。
  * 时间复杂度指的是语句执行次数，空间复杂度指的是算法执行所占的存储空间。
+ * 一般由O(1), O(n), O(logn), O(nlogn), O(n²), ...， O(n!). 从左到右复杂度依次增大。
+ 
  
 ~~~ 
 O(1) 常数: n:=10 
