--- a/算法.md
+++ b/算法.md
@@ -18,13 +18,17 @@
 * [四、Depth-first search(DFS)深度优先搜索](#4)
        - 695-max-area-of-island
        - 79-word-search
+       - 使用栈解决二叉树排序
 * [五、Breadth-first search(BFS)广度优先搜索](#5)
+       - 104-maximum-depth-of-binary-tree
+  
 * [六、Recursion/Backtrcae 递归 回溯](#6)
 * [七、Dynamic Programming 动态规划法](#7)
    - 64-minimum-path-sum
 * [八、Divide and conquer分治法](#8)
 * [九、Greedy贪心算法](#9)
-     - 122
+     - 122-best-time-to-buy-and-sell-stock-ii
+     - 402-remove-k-digits
 
 * [十、Graph图](#10)
 * [十一、总结](#11)
@@ -58,6 +62,7 @@ O(n!)阶乘
 [代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/searching/binarySearch.go)
     
 ### <span id="22">2.顺序查找</span>
+[代码地址](https://github.com/kgtom/back-end/blob/master/ds-and-alg/algorithms/searching/orderSearch.go)
 
 ### <span id="23">3.插入查找</span>
 
