--- a/数据库.md
+++ b/数据库.md
@@ -16,3 +16,15 @@
 2. 封锁类型
 3. 封锁协议
 4. MySQL 隐式与显示锁定
+
+## 慢查询问题(sql索引)
+* 1.去掉cache 查询
+* 2.单表字段区分度
+* 3.业务场景优化
+* 4.explain建立索引
+
+### 索引建立原则
+* 最左匹配，注意顺序
+* 检查区分度高低
+* 字段不包含计算，因为b+是字段值
+* 尽量索引扩展，而非新建
