--- a/数据库.md
+++ b/数据库.md
@@ -28,3 +28,50 @@
 * 检查区分度高低
 * 字段不包含计算，因为b+是字段值
 * 尽量索引扩展，而非新建
+### 索引demo
+
+#### 1.后缀的模糊like查询 xxx%,使用b-tree或者reverse索引
+运算符：text_pattern_ops, varchar_pattern_ops, bpchar_pattern_ops
+
+**创建索引:**
+~~~
+CREATE INDEX tsl_ticket_num_like_back_idx ON tsl (UPPER (ticket_num) text_pattern_ops ); 
+或者
+create index tsl_ticket_num_pre_idx on tsl(reverse(ticket_num) varchar_pattern_ops); 
+~~~
+**sql:**
+~~~
+explain (analyze,verbose,timing,costs,buffers) SELECT
+	* 
+FROM
+	"tsl" 
+WHERE
+	reverse (upper(ticket_num)) LIKE'081-2761367%' 
+	LIMIT 15
+~~~
+
+
+#### 2.前后模糊like查询，%xxx%,使用pg_trgm
+
+**创建索引:**
+~~~
+create extension pg_trgm; 
+create index tsl_ticket_num_like_2_idx on tsl using gin (UPPER (ticket_num) gin_trgm_ops);      
+
+~~~
+**sql:**
+~~~
+EXPLAIN ( ANALYZE, VERBOSE, timing, costs, buffers ) SELECT
+* 
+FROM
+	"tsl" 
+WHERE
+	UPPER ( ticket_num ) LIKE'%081-2761367%' 
+	LIMIT 15 
+~~~
+
+
+ps:[官方文档](http://www.postgres.cn/docs/9.6/indexes-opclass.html)
+[官方中文文档](https://www.yiibai.com/manual/postgresql/indexes-opclass.html)
+
+
