--- a/数据库.md
+++ b/数据库.md
@@ -17,7 +17,9 @@
 3. 封锁协议
 4. MySQL 隐式与显示锁定
 
-## 慢查询问题(sql索引)
+## 四、慢查询问题(sql索引)
+
+### 分析
 * 1.去掉cache 查询
 * 2.单表字段区分度
 * 3.业务场景优化
@@ -70,8 +72,10 @@ WHERE
 	LIMIT 15 
 ~~~
 
+## 五、
 
-ps:[官方文档](http://www.postgres.cn/docs/9.6/indexes-opclass.html)
-[官方中文文档](https://www.yiibai.com/manual/postgresql/indexes-opclass.html)
+> reference:
+* [官方文档](http://www.postgres.cn/docs/9.6/indexes-opclass.html)
+* [官方中文文档](https://www.yiibai.com/manual/postgresql/indexes-opclass.html)
 
 
